Se corrige la vista index, funciona hasta el capitulo 6

--- a/views/image.handlebars
+++ b/views/image.handlebars
@@ -134,7 +134,7 @@
                     </small>
                 </div>
             </li>
-            {{/#each}}
+            {{/each}}
         </ul>
     </div>
 </div>
