--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,14 +15,14 @@
     <div class="page-header">
         <div class="container">
             <div class="col-md-6">
-                <h1><a href="/">imgPloadr.io</a></h1>
+                <h1><a href="/">ImgPloadr.io</a></h1>
             </div>
         </div>
     </div>
     <div class="container">
         <div class="row">
             <div class="col-sm-8">
-              {{{ body }}}
+                {{{ body }}}
             </div>
             <div class="col-sm-4">
                 {{> stats this}}
@@ -38,7 +38,7 @@
             <div class="row">
                 <div class="col-sm-12" text-centered>
                     <p class="text-muted">
-                        imgPloadr.io | &copy; Copyright 2015, 
+                        ImgPloadr.io | &copy; Copyright 2015, 
                         All Rights Reserved
                     </p>
                     <p class="text-centered">
