--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,12 +36,12 @@
     <div style="border-top: solid 1px #eee; padding-top: 1em;">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12" text-centered>
+                <div class="col-sm-12 text-center">
                     <p class="text-muted">
                         ImgPloadr.io | &copy; Copyright 2015, 
                         All Rights Reserved
                     </p>
-                    <p class="text-centered">
+                    <p class="text-center">
                         <i 
                             class="fa fa-twitter-square fa-2x text-primary"></i>
                         <i 
