Se corrige el type del boton del formulario y se agrega el modulo de carga de imagenes

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,7 @@
             Upload an Image
         </h3>
     </div>
-    <form method="POST" 
+    <form method="post" 
     action="/images" enctype="multipart/form-data">
         <div class="panel-body form-horizontal">
             <div class="form-group col-md-12">
@@ -46,7 +46,7 @@
             
             <div class="form-group col-md-12">
                 <div class="col-md-12 text-right">
-                    <button type="button" id="login-btn"
+                    <button type="submit" id="login-btn"
                     class="btn btn-success">
                     <i class="fa fa-cloud-upload"></i>
                         Cargar Imagen
