Se agrega el helper para los comentarios

--- a/views/image.handlebars
+++ b/views/image.handlebars
@@ -123,7 +123,7 @@
                     src="http://www.gravatar.com/avatar/{{gravatar}}?d=mosterid&s=45"
                     alt="avatar image" class="media-object">
                 </a>
-                <div class="media-body">
+                <div class="media-body" id="{{_id}}">
                     {{comment}}
                     <br>
                     <strong class="media-heading">
