Se corrige error de comments en el layout, funciona sidebar ultimos comentarios

--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -6,7 +6,7 @@
     </div>
     <div class="panel-body">
         <ul class="media-list">
-            {{#each sidebars.comments}}
+            {{#each sidebar.comments}}
             <li class="media">
                 <a href="/images/{{image.uniqueId}}" 
                     class="pull-left">
