--- a/views/image.handlebars
+++ b/views/image.handlebars
@@ -18,6 +18,7 @@
     <div class="panel-footer">
         <div class="row">
             <div class="col-md-8">
+                <!-- Like Button -->
                 <button class="btn btn-success"
                 id="btn-like"
                 data-id="{{image.uniqueId}}">
@@ -30,6 +31,15 @@
                 &nbsp; - &nbsp; Posted: <em class="text-muted">
                     {{timeago image.timestamp}}
                 </em>
+            </div>
+            <!-- Delete Button -->
+            <div class="col-md-4 text-right">
+                <button 
+                class="btn btn-danger" 
+                id="btn-delete"
+                data-id="{{image.uniqueId}}">
+                    <i class="fa fa-times"> Delete</i>
+                </button>
             </div>
         </div>
     </div>
