Sweet alert funcionando

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
     <link rel="stylesheet" 
     href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"
     rel="stylesheet">
-    <link rel="stylesheet" href="/public/vendor/sweetalert2/dist/sweetalert2.min.css">
+    <link rel="stylesheet" href="/public/vendor/sweetalert/dist/sweetalert.css">
 </head>
 <body>
     <div class="page-header">
@@ -55,6 +55,6 @@
     </script>
     <script type="text/javascript" src="/public/js/scripts.js">
     </script>
-    <script src="/public/vendor/sweetalert2/dist/sweetalert2.min.js"></script>
+    <script src="/public/vendor/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 </html>
